==> MoseychukA/RTLSDR/STM32/SDR/SOFT/SoftRF_SDR_23_11_03/PLATFORM_STM32.cpp <==
#include <SPI.h>
#include <Wire.h>
#include <IWatchdog.h>
#include "SoC.h"
#include "RF.h"
#include "LED.h"
#include "Sound.h"
#include "EEPROMHELPER.h"
#include "BatteryHELPER.h"
#include "OLED.h"
#include "Baro.h"
#include "NMEA.h"
#include "GDL90.h"
#include "D1090.h"
#include <STM32LowPower.h>
#include <ICM_20948.h>
#define IMU_UPDATE_INTERVAL 500 /* ms */

static void STM32_setup()
{
    if (__HAL_RCC_GET_FLAG(RCC_FLAG_LPWRRST))
    {
        reset_info.reason = REASON_WDT_RST; // "LOW_POWER_RESET"
    }
    else if (__HAL_RCC_GET_FLAG(RCC_FLAG_WWDGRST))
    {
        reset_info.reason = REASON_WDT_RST; // "WINDOW_WATCHDOG_RESET"
    }
    else if (__HAL_RCC_GET_FLAG(RCC_FLAG_IWDGRST))
    {
        reset_info.reason = REASON_SOFT_WDT_RST; // "INDEPENDENT_WATCHDOG_RESET"
    }
    else if (__HAL_RCC_GET_FLAG(RCC_FLAG_SFTRST))
    {
        // This reset is induced by calling the ARM CMSIS `NVIC_SystemReset()` function!
        reset_info.reason = REASON_SOFT_RESTART; // "SOFTWARE_RESET"
    }
#if !defined(ARDUINO_GENERIC_WLE5CCUX) && !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    else if (__HAL_RCC_GET_FLAG(RCC_FLAG_PORRST))
    {
        reset_info.reason = REASON_DEFAULT_RST; // "POWER-ON_RESET (POR) / POWER-DOWN_RESET (PDR)"
    }
#endif /* ARDUINO_GENERIC_WLE5CCUX */
    else if (__HAL_RCC_GET_FLAG(RCC_FLAG_PINRST))
    {
        reset_info.reason = REASON_EXT_SYS_RST; // "EXTERNAL_RESET_PIN_RESET"
    }

    // Clear all the reset flags or else they will remain set during future resets until system power is fully removed.
    __HAL_RCC_CLEAR_RESET_FLAGS();

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    LowPower.begin();
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

    hw_info.model = SOFTRF_MODEL_RETRO;

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    Wire.setSCL(SOC_GPIO_PIN_SCL);
    Wire.setSDA(SOC_GPIO_PIN_SDA);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

#if defined(ARDUINO_NUCLEO_L073RZ)
    stm32_board = STM32_TTGO_TWATCH_EB_1_3;

    /* Probe on presence of external pull-up resistors connected to I2C bus */
    if (            STM32_probe_pin(SOC_GPIO_PIN_SCL, INPUT_PULLDOWN) == HIGH  &&
        (delay(50), STM32_probe_pin(SOC_GPIO_PIN_SCL, INPUT_PULLDOWN) == HIGH) &&
                    STM32_probe_pin(SOC_GPIO_PIN_SDA, INPUT_PULLDOWN) == HIGH  &&
        (delay(50), STM32_probe_pin(SOC_GPIO_PIN_SDA, INPUT_PULLDOWN) == HIGH)) {

      hw_info.model = SOFTRF_MODEL_DONGLE;
      stm32_board   = STM32_TTGO_TMOTION_1_1;

//      pinMode(TTGO_TIMPULSE_OLED_PIN_RST, INPUT_PULLUP); /* LP modded early rev. */

      pinMode(TTGO_TIMPULSE_VDD_1V8_EN, INPUT_PULLUP);
      delay(150);
      pinMode(TTGO_TIMPULSE_GPS_PWR_EN, INPUT_PULLUP);
      delay(50);

      Wire.begin();
      Wire.beginTransmission(ICM20948_ADDRESS);
      STM32_has_IMU = (Wire.endTransmission() == 0);
      Wire.end();

      pinMode(SOC_GPIO_PIN_SDA,  INPUT_ANALOG);
      pinMode(SOC_GPIO_PIN_SCL,  INPUT_ANALOG);

      if (STM32_has_IMU) {
        stm32_board   = STM32_TTGO_TIMPULSE_1_0;
        hw_info.model = SOFTRF_MODEL_BRACELET;
        hw_info.imu   = IMU_ICM20948;
        hw_info.mag   = MAG_AK09916;

        if (SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN) {
          pinMode(TTGO_TIMPULSE_GPIO_PAD_PWR, INPUT_PULLUP);
        }

        pinMode(TTGO_TIMPULSE_OLED_PIN_RST, INPUT_PULLDOWN);
      } else {
        pinMode(TTGO_TIMPULSE_VDD_1V8_EN, INPUT_ANALOG);
        pinMode(TTGO_TIMPULSE_GPS_PWR_EN, INPUT_ANALOG);
      }
    }

    // PC_1 is Low for TCXO or High for Crystal
#if !defined(ENFORCE_S78G)
    STM32_has_TCXO = (STM32_probe_pin(SOC_GPIO_PIN_OSC_SEL, INPUT) == 0);
#endif
    if (STM32_has_TCXO) {
      lmic_pins.tcxo = SOC_GPIO_PIN_TCXO_OE;
      hal_pin_tcxo_init();
      hal_pin_tcxo(0); // disable TCXO
    }

    /* De-activate 1.8V<->3.3V level shifters */
    digitalWrite(SOC_GPIO_PIN_GNSS_LS, LOW);
    delay(200);
    pinMode(SOC_GPIO_PIN_GNSS_LS, INPUT_ANALOG);

    digitalWrite(SOC_GPIO_PIN_ANT_RXTX, LOW);
    pinMode(SOC_GPIO_PIN_ANT_RXTX, OUTPUT_OPEN_DRAIN);

    if (!STM32_has_TCXO) {
      // because PC1 = high for LoRa Crystal, need to be careful of leakage current
      pinMode(SOC_GPIO_PIN_OSC_SEL, INPUT_PULLUP);
    }

    pinMode(SOC_GPIO_PIN_SS,  INPUT_PULLUP);

#elif defined(ARDUINO_BLUEPILL_F103CB)
    stm32_board = STM32_BLUE_PILL;

#elif defined(ARDUINO_GENERIC_WLE5CCUX)

    /* TBD */
    stm32_board = (SoC->getChipId() == 0x725c6907) ? STM32_EBYTE_E77 : STM32_OLIMEX_WLE5CC;
    hw_info.model = SOFTRF_MODEL_BALKAN;

#elif defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)

    /* TBD */
    stm32_board   = STM32_RAK_3172_EB;
    hw_info.model = SOFTRF_MODEL_BALKAN;

#else
#error "This hardware platform is not supported!"
#endif

#if defined(USBD_USE_CDC) && !defined(DISABLE_GENERIC_SERIALUSB)
    SerialOutput.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);
#endif

    uint32_t shudown_reason;
#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    shudown_reason = getBackupRegister(SHUTDOWN_REASON_INDEX);
    setBackupRegister(SHUTDOWN_REASON_INDEX, SOFTRF_SHUTDOWN_NONE);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

    switch (shudown_reason)
    {
    case SOFTRF_SHUTDOWN_NONE:
      break;
#if defined(USE_SERIAL_DEEP_SLEEP)
    case SOFTRF_SHUTDOWN_NMEA:
#if !defined(USBD_USE_CDC) || defined(DISABLE_GENERIC_SERIALUSB)
      SerialOutput.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);
#endif
      LowPower.enableWakeupFrom(&SerialOutput, STM32_SerialWakeup);

      LowPower.deepSleep();

      HAL_NVIC_SystemReset();
      break;
#endif /* USE_SERIAL_DEEP_SLEEP */
    case SOFTRF_SHUTDOWN_BUTTON:
    case SOFTRF_SHUTDOWN_LOWBAT:
#if defined(ARDUINO_NUCLEO_L073RZ)
      if (hw_info.model == SOFTRF_MODEL_BRACELET) {
        pinMode(TTGO_TIMPULSE_GPS_PWR_EN, INPUT_PULLDOWN);
        pinMode(TTGO_TIMPULSE_VDD_1V8_EN, INPUT_PULLDOWN);
      }
#endif /* ARDUINO_NUCLEO_L073RZ */
      if (SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN) {
        pinMode(SOC_GPIO_PIN_BUTTON, hw_info.model == SOFTRF_MODEL_DONGLE ?
                                     INPUT_PULLDOWN : INPUT);
#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
        LowPower.attachInterruptWakeup(SOC_GPIO_PIN_BUTTON,
                                       STM32_ButtonWakeup, RISING);

        LowPower.deepSleep();
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

        /* do not enter into DFU mode when BOOT button has dual function */
        while (hw_info.model == SOFTRF_MODEL_DONGLE &&
               digitalRead(SOC_GPIO_PIN_BUTTON) == HIGH);
        HAL_NVIC_SystemReset();
      } else {
        STM32_ULP_stop();
      }
      break;
    default:
      STM32_ULP_stop();
      break;
    }

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    bootCount = getBackupRegister(BOOT_COUNT_INDEX);
    bootCount++;
    setBackupRegister(BOOT_COUNT_INDEX, bootCount);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    pinMode(SOC_GPIO_PIN_BATTERY, INPUT_ANALOG);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

#if defined(ARDUINO_NUCLEO_L073RZ)
    lmic_pins.rxe = SOC_GPIO_PIN_ANT_RXTX;

    // Set default value at Rx
    digitalWrite(SOC_GPIO_PIN_ANT_RXTX, HIGH);

    if (stm32_board == STM32_TTGO_TIMPULSE_1_0) {
      delay(1);
      pinMode(TTGO_TIMPULSE_OLED_PIN_RST, INPUT_PULLUP);

#if !defined(EXCLUDE_IMU)
      imu.begin();

      pinMode(TTGO_TIMPULSE_SENSOR_INT, INPUT);

      IMU_Time_Marker = millis();
#endif /* EXCLUDE_IMU */
    }
#elif defined(ARDUINO_GENERIC_WLE5CCUX)
    switch (stm32_board)
    {
    case STM32_EBYTE_E77:
      lmic_pins.rxe = SOC_GPIO_ANT_RX_E77;
      lmic_pins.txe = SOC_GPIO_ANT_TX_E77;
      break;
    case STM32_SEEED_E5:
      lmic_pins.rxe = SOC_GPIO_ANT_RX_E5;
      lmic_pins.txe = SOC_GPIO_ANT_TX_E5;
      STM32_has_TCXO = true;
      lmic_pins.tcxo = SOC_GPIO_TCXO_E5;
      break;
    case STM32_ACSIP_ST50H: /* a.k.a. "RAK3172-SiP" */
      lmic_pins.rxe = SOC_GPIO_ANT_RX_ST50;
      lmic_pins.txe = SOC_GPIO_ANT_TX_ST50;
      STM32_has_TCXO = true;
      lmic_pins.tcxo = SOC_GPIO_TCXO_ST50;
      break;
    case STM32_RAK_3172_EB:
      lmic_pins.rxe = SOC_GPIO_ANT_RX_3172;
      lmic_pins.txe = SOC_GPIO_ANT_TX_3172;
      break;
    case STM32_OLIMEX_WLE5CC:
    default:
      lmic_pins.rxe = SOC_GPIO_ANT_RX_OLI;
      lmic_pins.txe = SOC_GPIO_ANT_TX_OLI;

      hal_set_rf_output(LOW); /* RFO_LP (default) */

      Wire.begin();
      Wire.beginTransmission(IIS2MDC_ADDRESS);
      hw_info.mag = (Wire.endTransmission() == 0) ? MAG_IIS2MDC : MAG_NONE;
      Wire.end();

      break;
    }

    if (STM32_has_TCXO) {
      hal_pin_tcxo(1);
      pinMode(lmic_pins.tcxo, OUTPUT);
    }
#endif /* ARDUINO_NUCLEO_L073RZ || ARDUINO_GENERIC_WLE5CCUX */

    Serial.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);

#if defined(USBD_USE_CDC) && !defined(DISABLE_GENERIC_SERIALUSB)
    /* Let host's USB and console drivers to warm-up */
    delay(2000);
#endif
}

static void STM32_loop()
{
#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
  // Reload the watchdog
  if (IWatchdog.isEnabled()) {
    IWatchdog.reload();
  }
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

#if !defined(EXCLUDE_IMU)
  if (hw_info.imu == IMU_ICM20948 &&
      (millis() - IMU_Time_Marker) > IMU_UPDATE_INTERVAL) {
    if (imu.dataReady()) {
      // milli g's
      float a_x = imu.accX();
      float a_y = imu.accY();
      float a_z = imu.accZ();

      IMU_g_x10 = (int) (sqrtf(a_x*a_x + a_y*a_y + a_z*a_z) / 100);
    }
    IMU_Time_Marker = millis();
  }
#endif /* EXCLUDE_IMU */
}

static void STM32_reset()
{
  HAL_NVIC_SystemReset();
}

static uint32_t STM32_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  /* Same method as STM32 OGN tracker does */
  uint32_t id = HAL_GetUIDw0() ^ HAL_GetUIDw1() ^ HAL_GetUIDw2();
  return DevID_Mapper(id);
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static void* STM32_getResetInfoPtr()
{
  return (void *) &reset_info;
}

static String STM32_getResetInfo()
{
  switch (reset_info.reason)
  {
    default                     : return F("No reset information available");
  }
}

static String STM32_getResetReason()
{
  switch (reset_info.reason)
  {
    case REASON_DEFAULT_RST       : return F("DEFAULT");
    case REASON_WDT_RST           : return F("WDT");
    case REASON_EXCEPTION_RST     : return F("EXCEPTION");
    case REASON_SOFT_WDT_RST      : return F("SOFT_WDT");
    case REASON_SOFT_RESTART      : return F("SOFT_RESTART");
    case REASON_DEEP_SLEEP_AWAKE  : return F("DEEP_SLEEP_AWAKE");
    case REASON_EXT_SYS_RST       : return F("EXT_SYS");
    default                       : return F("NO_MEAN");
  }
}

static uint32_t STM32_getFreeHeap()
{
  char *heapend = (char*)sbrk(0);
  char * stack_ptr = (char*)__get_MSP();
  struct mallinfo mi = mallinfo();

  return ((stack_ptr < minSP) ? stack_ptr : minSP) - heapend + mi.fordblks ;
}

static void STM32_swSer_begin(unsigned long baud)
{
  Serial_GNSS_In.begin(baud);

#if defined(ARDUINO_NUCLEO_L073RZ)
  /* drive GNSS RST pin low */
  pinMode(SOC_GPIO_PIN_GNSS_RST, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_GNSS_RST, LOW);

  /* activate 1.8V<->3.3V level shifters */
  pinMode(SOC_GPIO_PIN_GNSS_LS,  OUTPUT);
  digitalWrite(SOC_GPIO_PIN_GNSS_LS,  HIGH);

  /* keep RST low to ensure proper IC reset */
  delay(200);

  /* release */
  digitalWrite(SOC_GPIO_PIN_GNSS_RST, HIGH);

  /* give Sony GNSS few ms to warm up */
  delay(100);

  /* Leave pin floating */
  pinMode(SOC_GPIO_PIN_GNSS_RST, INPUT);

#endif /* ARDUINO_NUCLEO_L073RZ */
}

static float STM32_Battery_param(uint8_t param)
{
  float rval, voltage;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_DONGLE  ||
           hw_info.model == SOFTRF_MODEL_BRACELET ? BATTERY_THRESHOLD_LIPO   :
                                                    BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_DONGLE ||
           hw_info.model == SOFTRF_MODEL_BRACELET ? BATTERY_CUTOFF_LIPO   :
                                                    BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:
    voltage = Battery_voltage();
    if (voltage < Battery_cutoff())
      return 0;

    if (voltage > 4.2)
      return 100;

    if (voltage < 3.6) {
      voltage -= 3.3;
      return (voltage * 100) / 3;
    }

    voltage -= 3.6;
    rval = 10 + (voltage * 150 );
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:
#ifdef __LL_ADC_CALC_VREFANALOG_VOLTAGE
    int32_t Vref = (__LL_ADC_CALC_VREFANALOG_VOLTAGE(analogRead(AVREF), LL_ADC_RESOLUTION));
#else
    int32_t Vref = (VREFINT * ADC_RANGE / analogRead(AVREF)); // ADC sample to mV
#endif

    int32_t mV = (__LL_ADC_CALC_DATA_TO_VOLTAGE(Vref,
                                                analogRead(SOC_GPIO_PIN_BATTERY),
                                                LL_ADC_RESOLUTION));

    rval = mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
    break;
  }

  return rval;
}
